--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <button onclick="window.location.href='index.html';" style="padding: 10px 15px; background-color: #4b0082; color: white; border: none; border-radius: 5px; cursor: pointer;">
+    Go to Home Page
+</button>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6-Month Intensive French Learning Challenge</title>
