--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>6-Month Intensive French Learning Challenge</title>
+    <title>6-Month Intensive French Learning Challenge - Starts February 2025</title>
     <meta name="description" content="Take your French to the next level with our 6-month immersive language challenge. 4 weekly lessons, interactive speaking sessions, and free exam prep when you improve!">
     <meta name="keywords" content="French challenge, French learning, intensive French course, French speaking practice, learn French, improve French, French exam prep">
     <meta name="author" content="Meriem Bensaid">
@@ -85,7 +85,7 @@
 
     <header>
         <h1>6-Month Intensive French Learning Challenge</h1>
-        <p style="font-size: 1.5em; color: white; text-align: center;">Join our immersive, results-driven challenge to master French in just 6 months!</p>
+        <p style="font-size: 1.5em; color: white; text-align: center;">Join our immersive, results-driven challenge to master French in just 6 months, starting February 2025!</p>
     </header>
 
     <!-- Challenge Overview Section -->
@@ -144,7 +144,7 @@
     <section class="cta-section">
         <h2>Start Your Journey Today!</h2>
         <p>Don’t wait! Join the challenge and take your French to the next level. Sign up now or contact us for more information.</p>
-        <a href="contact.html" class="cta-button">Sign Up Now</a>
+        <a href="https://formspree.io/f/xjkkbrlj" class="cta-button">Sign Up Now</a>
     </section>
 
     <footer>
