Update 6 MONTHS CHALLENGE DETAILS.html

--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -144,7 +144,8 @@
     <section class="cta-section">
         <h2>Start Your Journey Today!</h2>
         <p>Don’t wait! Join the challenge and take your French to the next level. Sign up now or contact us for more information.</p>
-        <a href="https://formspree.io/f/xjkkbrlj" class="cta-button">Sign Up Now</a>
+        <a href="index.html" class="cta-button">Sign Up Now</a>
+
     </section>
 
     <footer>
