--- a/teacher-info.html
+++ b/teacher-info.html
@@ -160,7 +160,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Contact me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+        <p>Contact me at: <a href="mailto:your-frenchforeveryone74@gmail.com">frenchforeveryone74@gmail.com</a></p>
     </footer>
 </body>
 </html>
