--- a/index.html
+++ b/index.html
@@ -38,13 +38,38 @@
             color: #ddd;
         }
 
+        /* New Questions Section */
+        #questions {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+            text-align: center;
+        }
+
+        .question-box {
+            border: 2px solid purple;
+            padding: 20px;
+            width: 200px;
+            background-color: #f9f9f9;
+            color: purple;
+            border-radius: 8px;
+            box-sizing: border-box;
+            font-weight: bold;
+        }
+
+        .question-box:hover {
+            background-color: #f1e6f1;
+        }
+
+        /* Forms and Other Styles */
         .form-container {
             display: flex;
-            justify-content: space-between; /* Ensure the forms are next to each other */
+            justify-content: space-between;
             align-items: flex-start;
             margin: 20px;
             gap: 20px;
-            flex-wrap: nowrap; /* Prevent forms from wrapping */
+            flex-wrap: nowrap;
         }
 
         form {
@@ -53,7 +78,7 @@
             border: 1px solid #ccc;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 48%; /* Adjusted to ensure forms fit side by side */
+            width: 48%;
             box-sizing: border-box;
         }
 
@@ -91,27 +116,10 @@
             background-color: #555;
         }
 
-        /* 6-Months Challenge Styles */
-        #challenge-form {
-            border: 2px solid red;
-            background-color: #ffe6e6;
-            color: red;
-            position: relative;
-        }
-
-        #challenge-form h2 {
-            color: red;
-        }
-
-        #challenge-details {
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
         /* SIGNAL for the 6-Months Challenge Link */
         #challenge-link {
             font-weight: bold;
-            color: #ffcc00; /* Yellow color */
+            color: #ffcc00;
             font-size: 1.5em;
             text-align: center;
             padding: 10px;
@@ -125,15 +133,15 @@
         /* Centering Titles */
         #services h2,
         #student-needs h2 {
-            text-align: center; /* Center titles for services and understanding challenges */
+            text-align: center;
         }
 
         /* Responsive Design */
         @media (max-width: 768px) {
             nav a {
-                display: block; /* Stack navigation links on small screens */
+                display: block;
                 margin: 10px 0;
-                font-size: 1em; /* Adjusted font size for mobile */
+                font-size: 1em;
             }
 
             .form-container {
@@ -142,16 +150,16 @@
             }
 
             form {
-                width: 90%; /* Full width on mobile */
-                margin-bottom: 20px; /* Added space between forms */
+                width: 90%;
+                margin-bottom: 20px;
             }
 
             #hero img {
-                width: 80%; /* Adjusted image size for mobile */
+                width: 80%;
             }
 
             #student-needs, #services, #tariffs, #testimonials {
-                padding: 10px; /* Added padding for mobile */
+                padding: 10px;
             }
         }
     </style>
@@ -161,8 +169,8 @@
     <!-- Navigation Menu -->
     <nav>
         <a href="#hero">Home</a>
-        <a href="teacher-info.html">Teacher Info</a> <!-- Updated link for Teacher Info page -->
-        <a href="faq.html">FAQ</a> <!-- Updated link for FAQ page -->
+        <a href="teacher-info.html">Teacher Info</a>
+        <a href="faq.html">FAQ</a>
         <a href="#student-needs">Understanding Your Challenges</a>
         <a href="#services">Services</a>
         <a href="#tariffs">Tariffs</a>
@@ -172,6 +180,15 @@
     <header>
         <h1>French Lessons with Meriem</h1>
     </header>
+
+    <!-- New Question Section -->
+    <section id="questions">
+        <div class="question-box">You don't know where to start learning French?</div>
+        <div class="question-box">Are French classes expensive?</div>
+        <div class="question-box">Do you need someone to speak French with to practice?</div>
+        <div class="question-box">Do you have issues with grammar and word gender in French?</div>
+        <div class="question-box">Do you want to learn French from scratch?</div>
+    </section>
 
     <!-- SIGNAL Link for the 6-Month Challenge -->
     <div id="challenge-link" onclick="window.location.href='6%20MONTHS%20CHALLENGE%20DETAILS.html'">
@@ -250,34 +267,4 @@
     </div>
     <div class="testimonial">
         <blockquote>
-            "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!" 
-        </blockquote>
-        <p>- Anonymous, Dubai</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "As a diplomat from Spain, I needed to pass my diplomacy exams. With Meriem’s guidance, I achieved great results!" 
-        </blockquote>
-        <p>- A Diplomat, Spain</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "As a researcher in UAE, learning French was essential for my work. Meriem's effective teaching helped me achieve my goals." 
-        </blockquote>
-        <p>- A Researcher, UAE</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "Our child learned French quickly and effectively through Meriem's storytelling techniques. Highly recommended!" 
-        </blockquote>
-        <p>- Parents of a student, India</p>
-    </div>
-</section>
-
-
-    <footer>
-        <p style="text-align: center; padding: 20px; background-color: #333; color: white;">© 2024 French Lessons with Meriem. All rights reserved.</p>
-    </footer>
-</body>
-
-</html>
+            "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m
