--- a/index.html
+++ b/index.html
@@ -267,4 +267,26 @@
     </div>
     <div class="testimonial">
         <blockquote>
-            "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m
+            "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!" 
+        </blockquote>
+        <p>- Anonymous, Dubai</p>
+    </div>
+    <div class="testimonial">
+        <blockquote>
+            "As a diplomat from Spain, I needed to pass my diplomacy exams. With Meriem’s guidance, I achieved great results!" 
+        </blockquote>
+        <p>- A Diplomat, Spain</p>
+    </div>
+    <div class="testimonial">
+        <blockquote>
+            "As a researcher in UAE, learning French was essential for my work. Meriem's effective teaching helped me achieve my goals." 
+        </blockquote>
+        <p>- A Researcher, UAE</p>
+    </div>
+    <div class="testimonial">
+        <blockquote>
+            "Our child learned French quickly and effectively through Meriem's storytelling techniques. Highly recommended!" 
+        </blockquote>
+        <p>- Parents of a student, India</p>
+    </div>
+</section>
