--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
         🚨 Click Here to Learn About the 6-Month Challenge 🚨
     </div>
 
+    <!-- Added Appealing Signals Section -->
+    <section id="appealing-signals">
+        <div class="question-box">🎓 Free preparation for your Exam after learning</div>
+        <div class="question-box">💡 Affordable French lessons: 15 Euros ONLY for a 1.5-hour lesson</div>
+        <div class="question-box">🎉 LEARN FRENCH WITH FUN AND NO PRESSURE, ONLY PROGRESS</div>
+    </section>
+
     <section class="form-container">
         <!-- Contact Form -->
         <form action="https://formspree.io/f/xjkkbrlj" method="POST">
@@ -258,35 +265,25 @@
         </ul>
     </section>
     <section id="testimonials">
-    <h2>What My Students Say</h2>
-    <div class="testimonial">
-        <blockquote>
-            "We needed to prepare for our exams to move to Canada. Learning French from scratch was challenging, but Meriem made it possible!" 
-        </blockquote>
-        <p>- Sarah and Selma, Saudi Arabia</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!" 
-        </blockquote>
-        <p>- Anonymous, Dubai</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "As a diplomat from Spain, I needed to pass my diplomacy exams. With Meriem’s guidance, I achieved great results!" 
-        </blockquote>
-        <p>- A Diplomat, Spain</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "As a researcher in UAE, learning French was essential for my work. Meriem's effective teaching helped me achieve my goals." 
-        </blockquote>
-        <p>- A Researcher, UAE</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "Our child learned French quickly and effectively through Meriem's storytelling techniques. Highly recommended!" 
-        </blockquote>
-        <p>- Parents of a student, India</p>
-    </div>
-</section>
+        <h2>What My Students Say</h2>
+        <div class="testimonial">
+            <blockquote>
+                "We needed to prepare for our exams to move to Canada. Learning French from scratch was challenging, but Meriem made it possible!" 
+            </blockquote>
+            <p>- Sarah and Selma, Saudi Arabia</p>
+        </div>
+        <div class="testimonial">
+            <blockquote>
+                "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!" 
+            </blockquote>
+            <p>- Zahra, Dubai</p>
+        </div>
+        <div class="testimonial">
+            <blockquote>
+                "As a diplomat from Spain, I needed to pass my diplomacy exams. With Meriem’s guidance, I achieved great results!" 
+            </blockquote>
+            <p>- A Diplomat, Spain</p>
+        </div>
+        <div class="testimonial">
+            <blockquote>
+                "As a researcher in UAE, learning French
