--- a/index.html
+++ b/index.html
@@ -136,6 +136,16 @@
             text-align: center;
         }
 
+        /* Purple Bold Italic Text */
+        .form-text {
+            color: purple;
+            font-size: 1.3em;
+            font-weight: bold;
+            font-style: italic;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
         /* Responsive Design */
         @media (max-width: 768px) {
             nav a {
@@ -195,16 +205,10 @@
         🚨 Click Here to Learn About the 6-Month Challenge 🚨
     </div>
 
-    <!-- Added Appealing Signals Section -->
-    <section id="appealing-signals">
-        <div class="question-box">🎓 Free preparation for your Exam after learning</div>
-        <div class="question-box">💡 Affordable French lessons: 15 Euros ONLY for a 1.5-hour lesson</div>
-        <div class="question-box">🎉 LEARN FRENCH WITH FUN AND NO PRESSURE, ONLY PROGRESS</div>
-    </section>
-
     <section class="form-container">
         <!-- Contact Form -->
         <form action="https://formspree.io/f/xjkkbrlj" method="POST">
+            <div class="form-text">FILL THIS FORM TO SCHEDULE LESSONS AT YOUR PACE</div>
             <h2>Contact Me</h2>
             <label for="name">Full Name</label>
             <input type="text" id="name" name="name" placeholder="Your Full Name" required>
@@ -219,6 +223,7 @@
 
         <!-- 6-Months Challenge Form -->
         <form id="challenge-form" action="https://formspree.io/f/xjkkbrlj" method="POST">
+            <div class="form-text">FILL OUT THIS FORM IF YOU'RE READY TO JOIN THE LEARN FRENCH CHALLENGE: FROM BEGINNER TO MASTER!</div>
             <h2>🚨 6-Months Challenge</h2>
             <div id="challenge-details">
                 <p>💼 <b>90 min, 4 times a week</b></p>
@@ -265,25 +270,19 @@
         </ul>
     </section>
     <section id="testimonials">
-        <h2>What My Students Say</h2>
-        <div class="testimonial">
-            <blockquote>
-                "We needed to prepare for our exams to move to Canada. Learning French from scratch was challenging, but Meriem made it possible!" 
-            </blockquote>
-            <p>- Sarah and Selma, Saudi Arabia</p>
-        </div>
-        <div class="testimonial">
-            <blockquote>
-                "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!" 
-            </blockquote>
-            <p>- Zahra, Dubai</p>
-        </div>
-        <div class="testimonial">
-            <blockquote>
-                "As a diplomat from Spain, I needed to pass my diplomacy exams. With Meriem’s guidance, I achieved great results!" 
-            </blockquote>
-            <p>- A Diplomat, Spain</p>
-        </div>
-        <div class="testimonial">
-            <blockquote>
-                "As a researcher in UAE, learning French
+    <h2>What My Students Say</h2>
+    <div class="testimonial">
+        <blockquote>
+            "We needed to prepare for our exams to move to Canada. Learning French from scratch was challenging, but Meriem made it possible!" 
+        </blockquote>
+        <p>- Sarah and Selma, Saudi Arabia</p>
+    </div>
+    <div class="testimonial">
+        <blockquote>
+            "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!" 
+        </blockquote>
+        <p>- Anonymous, Dubai</p>
+    </div>
+    <div class="testimonial">
+        <blockquote>
+            "As a diplomat from Spain, I needed to pass my
