--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,14 +18,6 @@
         h1, h2 {
             text-align: center;
             color: purple; /* Added purple color to titles */
-        }
-
-        /* Appealing Sentences Styling */
-        #appealing-sentences p {
-            font-size: 1.5em;
-            font-weight: bold;
-            color: #ff6347; /* Tomato color for visibility */
-            margin: 10px 0;
         }
 
         /* Navigation Menu */
@@ -69,12 +62,6 @@
             background-color: #f1e6f1;
         }
 
-        /* Red Titles for Forms */
-        .form-title {
-            color: red;
-            font-weight: bold;
-        }
-
         /* Forms and Other Styles */
         .form-container {
             display: flex;
@@ -85,18 +72,110 @@
             flex-wrap: nowrap;
         }
 
-        /* Other existing CSS */
-        /* Your existing styles remain untouched */
+        form {
+            background-color: white;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 48%;
+            box-sizing: border-box;
+        }
+
+        form h2 {
+            margin-top: 0;
+        }
+
+        form label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        form input,
+        form textarea,
+        form button,
+        form input[type="date"] {
+            width: 100%;
+            margin-bottom: 15px;
+            padding: 10px;
+            font-size: 14px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        form button {
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        form button:hover {
+            background-color: #555;
+        }
+
+        /* SIGNAL for the 6-Months Challenge Link */
+        #challenge-link {
+            font-weight: bold;
+            color: #ffcc00;
+            font-size: 1.5em;
+            text-align: center;
+            padding: 10px;
+            background-color: #ffcc00;
+            color: white;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            cursor: pointer;
+        }
+
+        /* Centering Titles */
+        #services h2,
+        #student-needs h2 {
+            text-align: center;
+        }
+
+        /* Purple Bold Italic Text */
+        .form-text {
+            color: purple;
+            font-size: 1.3em;
+            font-weight: bold;
+            font-style: italic;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            nav a {
+                display: block;
+                margin: 10px 0;
+                font-size: 1em;
+            }
+
+            .form-container {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            form {
+                width: 90%;
+                margin-bottom: 20px;
+            }
+
+            #hero img {
+                width: 80%;
+            }
+
+            #student-needs, #services, #tariffs, #testimonials {
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 
 <body>
-    <!-- Appealing Sentences -->
-    <div id="appealing-sentences" style="text-align: center; margin: 20px;">
-        <p>LEARN FRENCH WITH AFFORDABLE PRICE: 1.5 hours for just 15 Euros per session!</p>
-        <p>LEARN FRENCH WITH A FUN TEACHER AND SEE QUICK PROGRESS!</p>
-    </div>
-
     <!-- Navigation Menu -->
     <nav>
         <a href="#hero">Home</a>
@@ -107,11 +186,6 @@
         <a href="#tariffs">Tariffs</a>
         <a href="#testimonials">Testimonials</a>
     </nav>
-
-    <!-- Rest of the page content remains unchanged -->
-</body>
-</html>
->
 
     <header>
         <h1>French Lessons with Meriem</h1>
@@ -195,20 +269,28 @@
             <li>Flexible scheduling to fit your lifestyle</li>
         </ul>
     </section>
+
     <section id="testimonials">
-    <h2>What My Students Say</h2>
-    <div class="testimonial">
-        <blockquote>
-            "We needed to prepare for our exams to move to Canada. Learning French from scratch was challenging, but Meriem made it possible!" 
-        </blockquote>
-        <p>- Sarah and Selma, Saudi Arabia</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!" 
-        </blockquote>
-        <p>- Anonymous, Dubai</p>
-    </div>
-    <div class="testimonial">
-        <blockquote>
-            "As a diplomat from Spain, I needed to pass my
+        <h2>What My Students Say</h2>
+        <div class="testimonial">
+            <blockquote>
+                "We needed to prepare for our exams to move to Canada. Learning French from scratch was challenging, but Meriem made it possible!"
+            </blockquote>
+            <p>- Sarah and Selma, Saudi Arabia</p>
+        </div>
+        <div class="testimonial">
+            <blockquote>
+                "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!"
+            </blockquote>
+            <p>- Anonymous, Dubai</p>
+        </div>
+        <div class="testimonial">
+            <blockquote>
+                "As a diplomat from Spain, I needed to pass my French exams quickly. Meriem’s approach was exactly what I needed to achieve my goals!"
+            </blockquote>
+            <p>- Javier, Spain</p>
+        </div>
+    </section>
+</body>
+
+</html>
