--- a/index.html
+++ b/index.html
@@ -38,12 +38,122 @@
             color: #ddd;
         }
 
-        /* Appealing Sentence Styling */
-        .centered-sentence {
+        /* New Questions Section */
+        #questions {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
             text-align: center;
-            font-size: 1.5em;
+            flex-wrap: wrap; /* Ensures it’s mobile-friendly */
+        }
+
+        .question-box {
+            border: 2px solid purple;
+            padding: 20px;
+            width: 200px;
+            background-color: #f9f9f9;
+            color: purple;
+            border-radius: 8px;
+            box-sizing: border-box;
             font-weight: bold;
+        }
+
+        .question-box:hover {
+            background-color: #f1e6f1;
+        }
+
+        /* Forms and Other Styles */
+        .form-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin: 20px;
+            gap: 20px;
+            flex-wrap: nowrap;
+        }
+
+        form {
+            background-color: white;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 48%;
+            box-sizing: border-box;
+        }
+
+        form h2 {
+            margin-top: 0;
+            color: red; /* Red Title */
+        }
+
+        form label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        form input,
+        form textarea,
+        form button,
+        form input[type="date"] {
+            width: 100%;
+            margin-bottom: 15px;
+            padding: 10px;
+            font-size: 14px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        form button {
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        form button:hover {
+            background-color: #555;
+        }
+
+        /* SIGNAL for the 6-Months Challenge Link */
+        #challenge-link {
+            font-weight: bold;
+            color: #ffcc00;
+            font-size: 1.5em;
+            text-align: center;
+            padding: 10px;
+            background-color: #ffcc00;
+            color: white;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            cursor: pointer;
+        }
+
+        /* Centering Titles */
+        #services h2,
+        #student-needs h2 {
+            text-align: center;
+        }
+
+        /* Purple Bold Italic Text */
+        .form-text {
+            color: purple;
+            font-size: 1.3em;
+            font-weight: bold;
+            font-style: italic;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        /* Appealing Sentence in Red */
+        .centered-red {
             color: red;
+            text-align: center;
+            font-size: 1.3em;
+            font-weight: bold;
             margin: 20px 0;
         }
 
@@ -92,8 +202,10 @@
         <h1>French Lessons with Meriem</h1>
     </header>
 
-    <!-- Centered Appealing Sentence -->
-    <div class="centered-sentence">LEARN FRENCH WITH AFFORDABLE PRICES: 1.5 HOURS FOR JUST 15 EUROS PER SESSION</div>
+    <!-- Updated Sentences -->
+    <section>
+        <div class="centered-red">LEARN FRENCH WITH AFFORDABLE PRICES: 1.5 HOURS FOR JUST 15 EUROS PER SESSION</div>
+    </section>
 
     <!-- New Question Section -->
     <section id="questions">
