--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
         <a href="#hero">Home</a>
         <a href="teacher-info.html">Teacher Info</a>
         <a href="faq.html">FAQ</a>
+        <a href="Tariffs.html">Tariffs</a>
         <a href="#student-needs">Understanding Your Challenges</a>
         <a href="#services">Services</a>
-        <a href="#tariffs">Tariffs</a>
         <a href="#testimonials">Testimonials</a>
     </nav>
 
