--- a/index.html
+++ b/index.html
@@ -311,5 +311,9 @@
         </div>
     </section>
 </body>
+<footer style="background-color: #333; color: #fff; text-align: center; padding: 10px; margin-top: 20px; font-size: 14px;">
+    © 2024 All Rights Reserved.
+</footer>
+
 
 </html>
