--- a/teacher-info.html
+++ b/teacher-info.html
@@ -134,29 +134,25 @@
     <img id="teacher-image" src="IMG_2556.jpg" alt="Teacher Image">
 
     <!-- Introduction Section -->
-    <section id="intro">
-        <h2>About Me</h2>
-        <p><strong>Une description n'est qu'un maquillage.</strong><br>
-        Let's meet so you can make your own description of me. <br><br>
+<section id="intro">
+    <h2>About Me</h2>
+    <p><strong>Une description n'est qu'un maquillage.</strong><br>
+    Let’s meet so you can form your own opinion of me. <br><br>
 
-        Oh, wait, apparently, I need to write something 🙄<br><br>
+    However, as it's customary, here’s a bit about me: <br><br>
 
-        Ok, so I’m 32 years old,<br>
-        I speak French, Arabic, English, German, and a little Spanish.<br><br>
+    I am 32 years old, fluent in French, Arabic, English, German, and conversational Spanish. I graduated in English Literature and Anglo-Saxon Studies and have been teaching French since <strong>2015</strong>. Over the years, I have had the privilege of working with professionals, diplomats, and students, tailoring lessons to help them achieve their language goals, whether for exams, career advancement, or personal enrichment. <br><br>
 
-        I graduated in English literature and Anglo-Saxon studies.<br><br>
+    - I am passionate about writing, particularly fiction. <br>
+    - In my free time, I enjoy playing basketball and traveling. <br><br>
 
-        - Passionate about writing, especially fiction.<br>
-        - I enjoy playing basketball and traveling.<br><br>
+    While I may not know exactly why you chose French, I do believe, as Duffy sings in <em>Mercy</em>,<br>
+    “I don’t know what you do, but you do it well.” <br><br>
 
-        I don’t know what made you choose French (you must tell me) but as Duffy said in her song “Mercy”<br>
+    I also have a love for books—whether reading them or simply collecting them. <br><br>
 
-        “I don’t know what you do, but you do it well.”<br><br>
-
-        I also like to read, or only buy books and store them without reading them, I just love having them nearby.<br><br>
-
-        Good luck!</p>
-    </section>
+    Good luck!</p>
+</section>
 
     <!-- Footer -->
     <footer>
