Update 6 MONTHS CHALLENGE DETAILS.html

--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6-Month Intensive French Learning Challenge - Starts February 2025</title>
-    <meta name="description" content="Take your French to the next level with our 6-month immersive language challenge. 4 weekly lessons, interactive speaking sessions, and free exam prep when you improve!">
+    <meta name="description" content="Take your French to the next level with our 6-month immersive language challenge. 3 weekly lessons, interactive speaking sessions, and free exam prep when you improve!">
     <meta name="keywords" content="French challenge, French learning, intensive French course, French speaking practice, learn French, improve French, French exam prep">
     <meta name="author" content="Meriem Bensaid">
     <style>
@@ -97,13 +97,13 @@
         <p>For the first three months, we will focus on building a strong foundation:</p>
         <ul>
             <li><strong>2 conventional lessons per week</strong> to strengthen your grammar, reading, and writing skills.</li>
-            <li><strong>2 unconventional lessons per week</strong> to improve your speaking, listening, and practical use of French.</li>
+            <li><strong>1 unconventional lesson per week</strong> to improve your speaking, listening, and practical use of French.</li>
         </ul>
 
         <h3>Month 4: Zoom Communication Sessions</h3>
         <p>In month 4, we focus entirely on speaking and communication. You’ll have:</p>
         <ul>
-            <li><strong>16 live Zoom sessions</strong> focused on interactive speaking practice.</li>
+            <li><strong>12 live Zoom sessions</strong> focused on interactive speaking practice.</li>
             <li>These sessions will help you gain confidence and fluency in real-world conversations.</li>
         </ul>
 
