--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -87,7 +87,23 @@
         <h1>6-Month Intensive French Learning Challenge</h1>
         <p style="font-size: 1.5em; color: white; text-align: center;">Join our immersive, results-driven challenge to master French in just 6 months, starting February 2025!</p>
     </header>
-
+<!-- 6-Months Challenge Form -->
+    <form id="challenge-form" action="https://formspree.io/f/xjkkbrlj" method="POST">
+        <div class="form-text">FILL OUT THIS FORM IF YOU'RE READY TO JOIN THE LEARN FRENCH CHALLENGE: FROM BEGINNER TO MASTER!</div>
+        <h2>🚨 6-Months Challenge</h2>
+        <div id="challenge-details">
+            <p>💼 <b>90 min, 3 times a week</b></p>
+            <p>💰 <b>200 Euros/month</b></p>
+            <p>🎯 <b>Reach B2 in French!</b></p>
+        </div>
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="Your Email Address" required>
+        <label for="availability">Preferred Lesson Times</label>
+        <textarea id="availability" name="availability" placeholder="Your availability"></textarea>
+        <button type="submit">Join Now</button>
+    </form>
     <!-- Challenge Overview Section -->
     <section class="challenge-section">
         <h2>What’s Inside the 6-Month French Challenge?</h2>
