Update 6 MONTHS CHALLENGE DETAILS.html

--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -88,22 +88,26 @@
         <p style="font-size: 1.5em; color: white; text-align: center;">Join our immersive, results-driven challenge to master French in just 6 months, starting February 2025!</p>
     </header>
 <!-- 6-Months Challenge Form -->
-    <form id="challenge-form" action="https://formspree.io/f/xjkkbrlj" method="POST">
-        <div class="form-text">FILL OUT THIS FORM IF YOU'RE READY TO JOIN THE LEARN FRENCH CHALLENGE: FROM BEGINNER TO MASTER!</div>
-        <h2>🚨 6-Months Challenge</h2>
-        <div id="challenge-details">
-            <p>💼 <b>90 min, 3 times a week</b></p>
-            <p>💰 <b>200 Euros/month</b></p>
-            <p>🎯 <b>Reach B2 in French!</b></p>
-        </div>
-        <label for="name">Full Name</label>
-        <input type="text" id="name" name="name" placeholder="Your Full Name" required>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Your Email Address" required>
-        <label for="availability">Preferred Lesson Times</label>
-        <textarea id="availability" name="availability" placeholder="Your availability"></textarea>
-        <button type="submit">Join Now</button>
-    </form>
+<form id="challenge-form" action="https://formspree.io/f/xjkkbrlj" method="POST" style="max-width: 600px; margin: 20px auto; padding: 20px; background-color: white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+    <h2 style="text-align: center; color: purple;">🚨 6-Months Challenge</h2>
+    <p style="text-align: center; font-size: 1.2em; color: #333;">FILL OUT THIS FORM IF YOU'RE READY TO JOIN THE LEARN FRENCH CHALLENGE: FROM BEGINNER TO MASTER!</p>
+    <div id="challenge-details" style="margin-bottom: 20px; text-align: center;">
+        <p>💼 <b>90 min, 3 times a week</b></p>
+        <p>💰 <b>200 Euros/month</b></p>
+        <p>🎯 <b>Reach B2 in French!</b></p>
+    </div>
+    <label for="name" style="display: block; margin-bottom: 8px; font-weight: bold;">Full Name</label>
+    <input type="text" id="name" name="name" placeholder="Your Full Name" required style="width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px;">
+
+    <label for="email" style="display: block; margin-bottom: 8px; font-weight: bold;">Email</label>
+    <input type="email" id="email" name="email" placeholder="Your Email Address" required style="width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px;">
+
+    <label for="availability" style="display: block; margin-bottom: 8px; font-weight: bold;">Preferred Lesson Times</label>
+    <textarea id="availability" name="availability" placeholder="Your availability" style="width: 100%; padding: 10px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px;"></textarea>
+
+    <button type="submit" style="display: block; width: 100%; padding: 10px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Join Now</button>
+</form>
+
     <!-- Challenge Overview Section -->
     <section class="challenge-section">
         <h2>What’s Inside the 6-Month French Challenge?</h2>
