Update 6 MONTHS CHALLENGE DETAILS.html

--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -82,6 +82,16 @@
     </style>
 </head>
 <body>
+    <!-- Navigation Menu -->
+    <nav>
+        <a href="#hero">Home</a>
+        <a href="teacher-info.html">Teacher Info</a>
+        <a href="faq.html">FAQ</a>
+        <a href="Tariffs.html">Tariffs</a>
+        <a href="#student-needs">Understanding Your Challenges</a>
+        <a href="#services">Services</a>
+        <a href="#testimonials">Testimonials</a>
+    </nav>
 
     <header>
         <h1>6-Month Intensive French Learning Challenge</h1>
@@ -160,13 +170,6 @@
         </ul>
     </section>
 
-    <!-- Call to Action Section -->
-    <section class="cta-section">
-        <h2>Start Your Journey Today!</h2>
-        <p>Don’t wait! Join the challenge and take your French to the next level. Sign up now or contact us for more information.</p>
-        <a href="index.html" class="cta-button">Sign Up Now</a>
-
-    </section>
 
     <footer>
         <p style="text-align: center; color: white;">© 2024 French Lessons with Meriem. All rights reserved.</p>
