Update 6 MONTHS CHALLENGE DETAILS.html

--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -104,13 +104,11 @@
 <body>
     <!-- Navigation Menu -->
     <nav>
-        <a href="#hero">Home</a>
+        <a href="#index.html">Home</a>
         <a href="teacher-info.html">Teacher Info</a>
         <a href="faq.html">FAQ</a>
         <a href="Tariffs.html">Tariffs</a>
-        <a href="#student-needs">Understanding Your Challenges</a>
-        <a href="#services">Services</a>
-        <a href="#testimonials">Testimonials</a>
+       
     </nav>
 
     <header>
