--- a/index.html
+++ b/index.html
@@ -276,23 +276,6 @@
         <button type="submit">Submit</button>
     </form>
 
-    <!-- 6-Months Challenge Form -->
-    <form id="challenge-form" action="https://formspree.io/f/xjkkbrlj" method="POST">
-        <div class="form-text">FILL OUT THIS FORM IF YOU'RE READY TO JOIN THE LEARN FRENCH CHALLENGE: FROM BEGINNER TO MASTER!</div>
-        <h2>🚨 6-Months Challenge</h2>
-        <div id="challenge-details">
-            <p>💼 <b>90 min, 3 times a week</b></p>
-            <p>💰 <b>200 Euros/month</b></p>
-            <p>🎯 <b>Reach B2 in French!</b></p>
-        </div>
-        <label for="name">Full Name</label>
-        <input type="text" id="name" name="name" placeholder="Your Full Name" required>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Your Email Address" required>
-        <label for="availability">Preferred Lesson Times</label>
-        <textarea id="availability" name="availability" placeholder="Your availability"></textarea>
-        <button type="submit">Join Now</button>
-    </form>
 </section>
 
     <section id="hero">
@@ -302,51 +285,110 @@
         </div>
     </section>
 
-    <section id="student-needs">
-        <h2 style="font-weight: bold;">Understanding Your Challenges</h2>
-        <p>Learning French (<em>apprendre le français</em>) can be challenging, but with the right support, it becomes enjoyable and rewarding. I understand the difficulties students face, such as:</p>
-        <ul>
-            <li><strong>Pronunciation challenges</strong> (<em>les défis de la prononciation</em>)</li>
-            <li><strong>Verb conjugation and grammar complexity</strong> (<em>la conjugaison des verbes et la complexité de la grammaire</em>)</li>
-            <li><strong>Difficulty finding speaking practice</strong> (<em>la difficulté à pratiquer l'oral</em>)</li>
-            <li><strong>Maintaining motivation and consistency</strong> (<em>le maintien de la motivation et de la régularité</em>)</li>
-            <li><strong>Overwhelming vocabulary and fear of mistakes</strong> (<em>le vocabulaire écrasant et la peur de faire des erreurs</em>)</li>
-        </ul>
-        <p>As a teacher, I focus on addressing these challenges by providing clear explanations, personalized lessons, practical speaking opportunities, and consistent feedback to keep you motivated and progressing.</p>
-    </section>
+    <style>
+    /* Section Styles */
+    section {
+        margin: 40px auto;
+        padding: 20px;
+        max-width: 800px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        background-color: white;
+    }
 
-    <section id="services">
-        <h2 style="font-weight: bold;">My Services</h2>
-        <ul>
-            <li>Customized lessons for all levels</li>
-            <li>French for travel, business, and exams</li>
-            <li>Specialized programs for rapid language improvement</li>
-            <li>Flexible scheduling to fit your lifestyle</li>
-        </ul>
-    </section>
+    section h2 {
+        font-size: 2em;
+        color: purple;
+        text-align: center;
+        margin-bottom: 20px;
+    }
 
-    <section id="testimonials">
-        <h2>What My Students Say</h2>
-        <div class="testimonial">
-            <blockquote>
-                "We needed to prepare for our exams to move to Canada. Learning French from scratch was challenging, but Meriem made it possible!"
-            </blockquote>
-            <p>- Sarah and Selma, Saudi Arabia</p>
-        </div>
-        <div class="testimonial">
-            <blockquote>
-                "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!"
-            </blockquote>
-            <p>- Anonymous, Dubai</p>
-        </div>
-        <div class="testimonial">
-            <blockquote>
-                "As a diplomat from Spain, I needed to pass my French exams quickly. Meriem’s approach was exactly what I needed to achieve my goals!"
-            </blockquote>
-            <p>- Javier, Spain</p>
-        </div>
-    </section>
-</body>
+    section p {
+        font-size: 1.2em;
+        line-height: 1.8;
+        text-align: justify;
+        color: #333;
+    }
+
+    section ul {
+        list-style-type: disc;
+        padding-left: 40px;
+        color: #555;
+    }
+
+    section ul li {
+        margin-bottom: 10px;
+        font-size: 1.1em;
+    }
+
+    .testimonial {
+        background-color: #f9f9f9;
+        padding: 20px;
+        border-left: 5px solid purple;
+        margin: 20px 0;
+        border-radius: 5px;
+    }
+
+    .testimonial blockquote {
+        font-size: 1.2em;
+        font-style: italic;
+        color: #555;
+        margin: 0 0 10px;
+    }
+
+    .testimonial p {
+        text-align: right;
+        font-size: 1em;
+        color: #777;
+        margin: 0;
+    }
+</style>
+
+<section id="student-needs">
+    <h2>Understanding Your Challenges</h2>
+    <p>Learning French (<em>apprendre le français</em>) can be challenging, but with the right support, it becomes enjoyable and rewarding. I understand the difficulties students face, such as:</p>
+    <ul>
+        <li><strong>Pronunciation challenges</strong> (<em>les défis de la prononciation</em>)</li>
+        <li><strong>Verb conjugation and grammar complexity</strong> (<em>la conjugaison des verbes et la complexité de la grammaire</em>)</li>
+        <li><strong>Difficulty finding speaking practice</strong> (<em>la difficulté à pratiquer l'oral</em>)</li>
+        <li><strong>Maintaining motivation and consistency</strong> (<em>le maintien de la motivation et de la régularité</em>)</li>
+        <li><strong>Overwhelming vocabulary and fear of mistakes</strong> (<em>le vocabulaire écrasant et la peur de faire des erreurs</em>)</li>
+    </ul>
+    <p>As a teacher, I focus on addressing these challenges by providing clear explanations, personalized lessons, practical speaking opportunities, and consistent feedback to keep you motivated and progressing.</p>
+</section>
+
+<section id="services">
+    <h2>My Services</h2>
+    <ul>
+        <li>Customized lessons for all levels</li>
+        <li>French for travel, business, and exams</li>
+        <li>Specialized programs for rapid language improvement</li>
+        <li>Flexible scheduling to fit your lifestyle</li>
+    </ul>
+</section>
+
+<section id="testimonials">
+    <h2>What My Students Say</h2>
+    <div class="testimonial">
+        <blockquote>
+            "We needed to prepare for our exams to move to Canada. Learning French from scratch was challenging, but Meriem made it possible!"
+        </blockquote>
+        <p>- Sarah and Selma, Saudi Arabia</p>
+    </div>
+    <div class="testimonial">
+        <blockquote>
+            "As a stay-at-home mother in Dubai, learning French seemed impossible. Thanks to Meriem, I’m now almost fluent!"
+        </blockquote>
+        <p>- Anonymous, Dubai</p>
+    </div>
+    <div class="testimonial">
+        <blockquote>
+            "As a diplomat from Spain, I needed to pass my French exams quickly. Meriem’s approach was exactly what I needed to achieve my goals!"
+        </blockquote>
+        <p>- Javier, Spain</p>
+    </div>
+</section>
+
 <footer style="background-color: #333; color: #fff; text-align: center; padding: 10px; margin-top: 20px; font-size: 14px;">
     © 2024 All Rights Reserved.
 </footer>
